--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ input{
 .btn__0{
     grid-area: zero;
     background-color: rgb(74, 72, 72);
-    width: 80px;
+    width: 100%;
     height: 80px;
     border-radius: 50%;
     color: whitesmoke;
@@ -138,7 +138,7 @@ border: none;
 .btn__egale{
     grid-area: egale;
     background-color: rgb(230, 100, 26);
-    width: 80px;
+    width: 100%;
     height: 80px;
     border-radius: 50%;
     color: whitesmoke;
@@ -187,7 +187,7 @@ border: none;
 .btn__effacer{
     grid-area: effacer;
     background-color: rgb(230, 100, 26);
-    width: 80px;
+    width: 100%;
     height: 80px;
     border-radius: 50%;
     color: whitesmoke;
